--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,18 @@ aiohttp==3.12.15
 aiohttp-retry==2.9.1
 aiosignal==1.4.0
 amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.8.0
 APScheduler==3.11.0
 arabic-reshaper==3.0.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
 asgiref==3.9.1
 asn1crypto==1.5.1
 asttokens==3.0.0
 attrs==25.3.0
+Authlib==1.4.1
+bandit==1.8.0
 billiard==4.2.1
 black==25.9.0
 Brotli==1.1.0
@@ -71,12 +77,14 @@ django-widget-tweaks==1.5.0
 django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework-simplejwt==5.2.2
+dparse==0.6.4
 elastic-transport==9.1.0
 elasticsearch==9.1.1
 et_xmlfile==2.0.0
 executing==2.2.1
 factory_boy==3.3.3
 Faker==37.8.0
+filelock==3.17.0
 flake8==7.3.0
 fonttools==4.58.1
 frozenlist==1.7.0
@@ -88,8 +96,11 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
 googleapis-common-protos==1.70.0
 gunicorn==21.2.0
+h11==0.14.0
 html5lib==1.1
+httpcore==1.0.7
 httplib2==0.22.0
+httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 ipython==8.25.0
@@ -103,13 +114,17 @@ kiwisolver==1.4.8
 kombu==5.5.4
 lxml==6.0.1
 Markdown==3.8
+markdown-it-py==3.0.0
 MarkupPy==1.18
 MarkupSafe==3.0.2
+marshmallow==3.27.0
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+mdurl==0.1.2
 multidict==6.6.4
-mypy_extensions==1.1.0
+mypy_extensions==1.1.1
+nltk==3.9.1
 numpy==2.2.6
 oauthlib==3.2.2
 odfpy==1.4.1
@@ -135,6 +150,8 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.0
 pycodestyle==2.14.0
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 pydyf==0.11.0
 pyflakes==3.4.0
 Pygments==2.19.1
@@ -159,28 +176,42 @@ pytokens==0.1.10
 pytz==2025.2
 PyYAML==6.0.2
 redis==6.4.0
+regex==2024.11.6
 reportlab==4.4.4
 requests==2.32.5
 requests-oauthlib==2.0.0
+rich==13.9.4
 rsa==4.9.1
+ruamel.yaml==0.18.8
+ruamel.yaml.clib==0.2.12
+safety==3.3.2
+safety-schemas==0.0.10
 scikit-learn==1.6.1
 scipy==1.15.3
 seaborn==0.13.2
 sentry-sdk==2.38.0
 setuptools==80.0.0
+shellingham==1.5.4
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
 stack-data==0.6.3
+stevedore==5.3.0
 svglib==1.5.1
 swapper==1.4.0
 tablib==3.5.0
+tenacity==10.0.0
 text-unidecode==1.3
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tinyhtml5==2.0.0
+tomlkit==0.14.0
+tqdm==4.67.1
 traitlets==5.14.3
 twilio==9.8.1
+typer==0.17.0
 typing_extensions==4.14.0
+typing-inspection==0.9.0
 tzdata==2025.2
 tzlocal==5.3.1
 ua-parser==1.0.1
@@ -193,6 +224,7 @@ vine==5.1.0
 wcwidth==0.2.13
 weasyprint==66.0
 webencodings==0.5.1
+wheel==0.46.0
 whitenoise==6.5.0
 xhtml2pdf==0.2.17
 xlrd==2.0.1
